--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -110,6 +110,19 @@
       </form>
     </div>
 
+    <div class="words-stats container-fluid mt-5 pb-5 px-5">
+      <div class="row">
+        <div class = "mt-3 pb-2 col">
+          <h2 class="text-center">Cyrillic lemmatized words</h2>
+          <ul class="cyrillic list-group"></ul>
+        </div>
+        <div class = "mt-3 pb-2 col">
+          <h2 class="text-center">Non-Cyrillic non-lemmatized words</h2>
+          <ul class="non-cyrillic list-group"></ul>
+        </div>
+      </div>
+    </div>
+
     <footer>
           <p class = "mt-3 pb-2">2022</p>
           <a href="https://github.com/a-oleg">
@@ -122,6 +135,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!--<script src="script.js"></script>-->
+    <script src="../static/script.js"></script>
    </body>
  </html>
