--- a/src/main/resources/templates/downloadResult.html
+++ b/src/main/resources/templates/downloadResult.html
@@ -1,15 +1,72 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!-- 
+
+    Пример полученого JSON объекта
+    {"id":2598039,"word":"поиск","code":30459,"codeParent":0,"count":1,"cyrillic":false},
+    {"id":2598040,"word":"дерево","code":30460,"codeParent":0,"count":4,"cyrillic":true},
+    {"id":2598041,"word":"машина","code":30461,"codeParent":0,"count":5,"cyrillic":false},
+    {"id":2598042,"word":"самолёт","code":30462,"codeParent":0,"count":20,"cyrillic":true},
+    {"id":2598043,"word":"автомат","code":30463,"codeParent":0,"count":1,"cyrillic":false},
+    {"id":2598044,"word":"кабина","code":30464,"codeParent":0,"count":2,"cyrillic":true},
+    {"id":2598045,"word":"диван","code":30465,"codeParent":0,"count":67,"cyrillic":false},
+    {"id":2598046,"word":"стол","code":30466,"codeParent":0,"count":7,"cyrillic":true},
+    {"id":2598047,"word":"стул","code":30467,"codeParent":0,"count":8,"cyrillic":false},
+    {"id":2598048,"word":"масло","code":30468,"codeParent":0,"count":11,"cyrillic":true}
+
+-->
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="style.css" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <title class="mt-5 mb-5">Word statistics</title>
+
+    <script>
+        // Передаем JSON в JS
+        let jsonWords = `[
+            {"id":2598039,"word":"поиск","code":30459,"codeParent":0,"count":1,"cyrillic":false},
+            {"id":2598040,"word":"дерево","code":30460,"codeParent":0,"count":4,"cyrillic":true},
+            {"id":2598041,"word":"машина","code":30461,"codeParent":0,"count":5,"cyrillic":false},
+            {"id":2598042,"word":"самолёт","code":30462,"codeParent":0,"count":20,"cyrillic":true},
+            {"id":2598043,"word":"автомат","code":30463,"codeParent":0,"count":1,"cyrillic":false},
+            {"id":2598044,"word":"кабина","code":30464,"codeParent":0,"count":2,"cyrillic":true},
+            {"id":2598045,"word":"диван","code":30465,"codeParent":0,"count":67,"cyrillic":false},
+            {"id":2598046,"word":"стол","code":30466,"codeParent":0,"count":7,"cyrillic":true},
+            {"id":2598047,"word":"стул","code":30467,"codeParent":0,"count":8,"cyrillic":false},
+            {"id":2598048,"word":"масло","code":30468,"codeParent":0,"count":11,"cyrillic":true}
+        ]`;
+
+        function ready() {
+            // JSON массив переводим в обычный массив
+            let arrayWords = JSON.parse(jsonWords);
+            let idBlockCyrillic = '#blockCyrillic';
+            let idBlockNonCyrillic = '#blockNonCyrillic';
+
+            // Добавляем элементы в HTML
+            arrayWords.forEach((word) => {
+                ulID = word.cyrillic ? idBlockCyrillic : idBlockNonCyrillic;
+                $(ulID).append(`<li>${word.word} - ${word.count}</li>`);
+            });
+
+            // Проверяем, если в каком-то из подзаголовков отсутствуют слова, то под соответствующим выводим текст
+            if (!document.querySelector(idBlockCyrillic).querySelectorAll('li').length) {
+                $(idBlockCyrillic).append(`There are no words for analysis`);
+            }
+            if (!document.querySelector(idBlockNonCyrillic).querySelectorAll('li').length) {
+                $(idBlockNonCyrillic).append(`There are no words for analysis`);
+            }
+        }
+        document.addEventListener("DOMContentLoaded", ready);
+    </script>
+
+  </head>
+  <body>
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!--Logo-->
       <a href="#" class="navbar-brand">
@@ -31,13 +88,9 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item1" href="#" data-toggle="modal" data-target="#exampleModal">about the service</a>
               <a class="dropdown-item2" href="#" data-toggle="modal" data-target="#exampleModalCenter">about the developer</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">The last five requests<span class="sr-only">(current)</span></a>
+            </div>
           </li>
         </ul>
-      </div>
-      
     </nav>
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -49,28 +102,7 @@
             </button>
           </div>
           <div class="modal-body">
-        This is a training program. It copies the text from the specified web pages
-        </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <h1 class="text-center mt-5 pb-5">The file will be downloaded to your computer. Check the downloads folder</h1>
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">
-            About the developer
-        </h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-           You can find out about the developer of the program from his <a href="https://github.com/a-oleg" class="text-decoration-none">github</a>
+              This is a training program. It copies the text from the specified web pages
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -79,27 +111,31 @@
       </div>
     </div>
 
-    <div class="container-fliud mt-5 pb-5 px-5">
-    <h2>Example of uploaded text:</h2>
-        <!--
-        <p th:each = "url : ${urls.instanceMap}">
-            <p th:text="${url.key}" />
-            <p th:text="${url.value}" />
-        </p>
-        -->
-      <p>
-        <p th:text="${URL0}" />
-        <p th:text="${textPage0}" />
-
-        <p th:text="${URL1}" />
-        <p th:text="${textPage1}" />
-      </p>
+    <div class="words-stats container-fluid mt-5 pb-5 px-5">
+      <div class="row">
+        <div class = "mt-3 pb-2 col">
+          <h2 class="text-center">Cyrillic lemmatized words</h2>
+          <ul id="blockCyrillic" class="cyrillic list-group"></ul>
+        </div>
+        <div class = "mt-3 pb-2 col">
+          <h2 class="text-center">Non-Cyrillic non-lemmatized words</h2>
+          <ul id="blockNonCyrillic" class="non-cyrillic list-group"></ul>
+        </div>
+      </div>
     </div>
+
+    <footer>
+          <p class = "mt-3 pb-2">2022</p>
+          <a href="https://github.com/a-oleg">
+            <img src="files/github.png" alt="">
+          </a>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
-</html>
+    <script src="../static/script.js"></script>
+   </body>
+ </html>
